# ChangeLog for www-client/leechcraft-deadlyrics
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/leechcraft-deadlyrics/ChangeLog,v 1.7 2012/02/04 19:20:32 ago Exp $

  04 Feb 2012; Agostino Sarubbo <ago@gentoo.org>
  leechcraft-deadlyrics-0.4.99.ebuild:
  Stable for amd64, wrt bug #400605

*leechcraft-deadlyrics-0.4.99 (02 Feb 2012)

  02 Feb 2012; Maxim Koltsov <maksbotan@gentoo.org>
  +leechcraft-deadlyrics-0.4.99.ebuild:
  Big leechcraft bump to 0.4.99, thanks to 0xd34df00d

*leechcraft-deadlyrics-0.4.97 (31 Dec 2011)

  31 Dec 2011; Maxim Koltsov <maksbotan@gentoo.org>
  -leechcraft-deadlyrics-0.4.85.ebuild, -leechcraft-deadlyrics-0.4.90.ebuild,
  +leechcraft-deadlyrics-0.4.97.ebuild:
  Bump to 0.4.97, remove 0.4.80 and 0.4.90

*leechcraft-deadlyrics-0.4.96-r1 (16 Dec 2011)

  16 Dec 2011; Maxim Koltsov <maksbotan@gentoo.org>
  -leechcraft-deadlyrics-0.4.96.ebuild,
  +leechcraft-deadlyrics-0.4.96-r1.ebuild, leechcraft-deadlyrics-9999.ebuild:
  Bump to eapi4, fix bug 394935

*leechcraft-deadlyrics-0.4.96 (15 Dec 2011)

  15 Dec 2011; Maxim Koltsov <maksbotan@gentoo.org>
  +leechcraft-deadlyrics-0.4.96.ebuild:
  Bump www-client/leechcraft-deadlyrics to 0.4.96, thanks to 0xd34df00d

*leechcraft-deadlyrics-0.4.90 (14 Sep 2011)

  14 Sep 2011; Maxim Koltsov <maksbotan@gentoo.org>
  +leechcraft-deadlyrics-0.4.90.ebuild:
  Bump www-client/leechcraft-deadlyrics to 0.4.90, thanks to 0xd34df00d

*leechcraft-deadlyrics-9999 (25 Aug 2011)
*leechcraft-deadlyrics-0.4.85 (25 Aug 2011)

  25 Aug 2011; Maxim Koltsov <maksbotan@gentoo.org>
  +leechcraft-deadlyrics-0.4.85.ebuild, +leechcraft-deadlyrics-9999.ebuild,
  +metadata.xml:
  Copy www-client/leechcraft-deadlyrics from rion-overlay, thanks to 0xd34df00d
