@@ -1,18 +1,0 @@
-# Copyright 1999-2011 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/leechcraft-deadlyrics/leechcraft-deadlyrics-0.4.97.ebuild,v 1.1 2011/12/31 12:20:57 maksbotan Exp $
-
-EAPI="4"
-
-inherit leechcraft
-
-DESCRIPTION="Searches for song lyrics and displays them in LeechCraft"
-
-SLOT="0"
-KEYWORDS="~amd64 ~x86"
-IUSE="debug"
-
-DEPEND="~net-misc/leechcraft-core-${PV}"
-RDEPEND="${DEPEND}
-		virtual/leechcraft-search-show
-		virtual/leechcraft-downloader-http"
